Using jacoco as coverage

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,10 @@
  */
 
 // Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+    id 'jacoco'
+}
 
 
 // Make sure we are using Java 8.
@@ -24,6 +27,18 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
     mavenCentral()
+}
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled = true
+        xml.enabled = true
+        csv.enabled = true
+    }
 }
 
 test {
